--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
 .App {
-  text-align: center;
+  
+  justify-items: center;
+}
+
+body {
+  background-color: grey
 }
 
 .App-logo {
   height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
@@ -17,6 +29,40 @@
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+
+.user-info {
+  width: 460px;
+  height: 350px;
+  margin: auto 100px;
+  padding: 32px;
+  font-weight: bold;
+  background-color: white ;
+  box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+ 
+ 
 }
+.form {
+  display: flex;
+  flex-direction: column !important;
+  justify-content: space-around;
+  
+}
+.user-results {
+
+  border: solid black 1px;
+  background-color: black;
+  color: white;
+
+}
+.title  {
+  justify-content: center;
+  margin-left: 200px;
+}
+
+
+
+
+
+
+
